# rover_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: diffdrive.yaml  joints.yaml
launch/: custom.world  description.launch  os1_world.launch  rover_description.launch  view_model.launch
models/marsyard_terrain/meshes/: terrain_compressed.pcd
ouster_description/urdf/: example.urdf.xacro
urdf/: OS1-64.urdf.xacro  arm.xacro  backup_macros.xacro  backup_rover.xacro  macros.xacro  model.urdf  rover.gazebo  rover.urdf.xacro
urdf/old/: model.urdf  rover.gazebo  rover1.urdf.xacro
worlds/: moon_surface.world
